# NewNRP

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  NOTICE  README.md  README.mk  bashrc  build.sh
docs/example_engine/: CMakeLists.txt
docs/example_engine/example_engine_server_executable/: example_engine_server_executable.cpp  example_engine_server_executable.h  main.cpp
nrp_engine_protocols/nrp_json_engine_protocol/: CMakeLists.txt
nrp_engine_protocols/nrp_json_engine_protocol/tests/: engine_json_config.cpp  engine_json_nrp_client.cpp  engine_json_server.cpp  json_device_methods.cpp  test_engine_json_device_controllers.h
nrp_gazebo_engines/nrp_gazebo_devices/: CMakeLists.txt
nrp_gazebo_engines/nrp_gazebo_devices/nrp_gazebo_devices/: physics_camera.cpp  physics_camera.h  physics_joint.cpp  physics_joint.h  physics_link.cpp  physics_link.h
nrp_gazebo_engines/nrp_gazebo_devices/python/: python_module.cpp
nrp_gazebo_engines/nrp_gazebo_grpc_engine/: CMakeLists.txt
nrp_gazebo_engines/nrp_gazebo_grpc_engine/gazebo_grpc_plugins/: CMakeLists.txt
nrp_gazebo_engines/nrp_gazebo_grpc_engine/tests/: test_env_cmake.h.in  test_gazebo_engine.cpp
nrp_gazebo_engines/nrp_gazebo_mpi_engine/: CMakeLists.txt
nrp_gazebo_engines/nrp_gazebo_mpi_engine/gazebo_plugins/: CMakeLists.txt
nrp_gazebo_engines/nrp_gazebo_mpi_engine/tests/: test_env_cmake.h.in  test_gazebo_engine.cpp
nrp_gazebo_json_engine/gazebo_json_plugins/: CMakeLists.txt
nrp_gazebo_json_engine/gazebo_json_plugins/nrp_camera_controller_plugin/: nrp_camera_controller_plugin.cpp  nrp_camera_controller_plugin.h
nrp_gazebo_json_engine/gazebo_json_plugins/nrp_communication_controller/: nrp_communication_controller.cpp  nrp_communication_controller.h  nrp_communication_plugin.cpp
nrp_gazebo_json_engine/gazebo_json_plugins/nrp_joint_controller/: nrp_joint_controller.cpp  nrp_joint_controller.h
nrp_gazebo_json_engine/gazebo_json_plugins/nrp_link_controller_plugin/: nrp_link_controller_plugin.cpp  nrp_link_controller_plugin.h  nrp_link_controller_plugin.h.orig
nrp_gazebo_json_engine/gazebo_json_plugins/nrp_world_plugin/: nrp_world_plugin.cpp
nrp_gazebo_mpi_engine/gazebo_plugins/: CMakeLists.txt
nrp_gazebo_mpi_engine/gazebo_plugins/nrp_camera_controller_plugin/: nrp_camera_controller_plugin.cpp  nrp_camera_controller_plugin.h
nrp_gazebo_mpi_engine/gazebo_plugins/nrp_communication_controller/: nrp_communication_controller.cpp  nrp_communication_controller.h  nrp_communication_plugin.cpp  nrp_communication_plugin.h
nrp_gazebo_mpi_engine/gazebo_plugins/nrp_joint_controller/: nrp_joint_controller.cpp  nrp_joint_controller.h
nrp_gazebo_mpi_engine/gazebo_plugins/nrp_link_controller_plugin/: nrp_link_controller_plugin.cpp  nrp_link_controller_plugin.h
nrp_gazebo_mpi_engine/gazebo_plugins/nrp_world_plugin/: nrp_world_plugin.cpp  nrp_world_plugin.h
nrp_general_library/: CMakeLists.txt
nrp_general_library/cmake/: CompileMPI4Py.cmake  FindMPI4Py.cmake  ProjectConfig.cmake.in  set_env_exec.sh  set_env_exec.sh.in
nrp_general_library/depends/mpi4py/: .gitignore
nrp_general_library/depends/restclient-cpp/: CMakeLists.txt
nrp_general_library/nrp_general_library/config/: base_config.cpp  base_config.h  cmake_constants.h.in  config_storage.cpp  config_storage.h  engine_config.cpp  engine_config.h  simple_engine_config.cpp  simple_engine_config.h  simulation_config.cpp  simulation_config.h  transceiver_function_config.cpp  transceiver_function_config.h
nrp_general_library/nrp_general_library/config_headers/: nrp_cmake_constants.h  nrp_cmake_constants.h.in
nrp_general_library/nrp_general_library/device_interface/: device.cpp  device.h  device_conversion_mechanism.cpp  device_conversion_mechanism.h  device_interface.cpp  device_interface.h  device_serializer.cpp  device_serializer.h  device_serializer_methods.cpp  device_serializer_methods.h  python_device.cpp  python_device.h
nrp_general_library/nrp_general_library/engine_interfaces/: engine_device_controller.cpp  engine_device_controller.h  engine_interface.cpp  engine_interface.h  engine_launcher_manager.cpp  engine_launcher_manager.h
nrp_general_library/nrp_general_library/plugin_system/: plugin.cpp  plugin.h  plugin_manager.cpp  plugin_manager.h
nrp_general_library/nrp_general_library/proto/: dummy.proto  (+1 more)
nrp_general_library/nrp_python_device/: __init__.py.in  python_module.cpp  python_module.h
nrp_general_library/tests/: base_config.cpp  config_storage.cpp  device_interface.cpp  engine_grpc.cpp  engine_json_config.cpp  engine_json_nrp_client.cpp  engine_json_server.cpp  engine_launcher_manager.cpp  json_device_interface.cpp  json_device_methods.cpp  json_property_serializer.cpp  mpi_communication.cpp  mpi_property_serializer.cpp  plugin_manager.cpp  property_template.cpp  python_dict_property_serializer.cpp  python_module.cpp  test_engine_json_device_controllers.h  test_env_cmake.h  test_env_cmake.h.in  test_mpi_communication_devices.cpp  test_mpi_communication_devices.h  test_mpi_communication_proc.cpp  test_plugin.cpp  test_process_exec.cpp  test_process_launcher_basic.cpp  test_transceiver_function_interpreter.cpp  test_transceiver_function_interpreter.h  transceiver_function_interpreter.cpp
nrp_nest_json_engine/: CMakeLists.txt
nrp_nest_json_engine/nest_server_executable/: main.cpp  nest_server_executable.cpp  nest_server_executable.h
nrp_nest_json_engine/tests/: test_env_cmake.h  test_env_cmake.h.in  test_nest_executable.cpp  test_nest_server.cpp
nrp_nest_server_engine/: CMakeLists.txt
nrp_nest_server_engine/nest_server_executable/: nest_server_executable.cpp  nest_server_executable.h
nrp_nest_server_engine/tests/: test_env_cmake.h  test_env_cmake.h.in  test_nest_executable.cpp  test_nest_server.cpp
nrp_simulation/: .gitignore  CMakeLists.txt
nrp_simulation/nrp_gen_server_conf/: nrp_gen_server_conf.cpp
nrp_simulation/nrp_simulation_executable/: main.cpp
nrp_simulation/tests/: main.cpp  simulation_loop.cpp  simulation_manager.cpp  test_env_cmake.h  test_env_cmake.h.in
proto/: CMakeLists.txt  engine_grpc.proto
(+582 files in other folders)
